@@ -14,6 +14,7 @@
         <file alias="units/tanks/Turret.qml">qml/units/tanks/Turret.qml</file>
         <file alias="units/tanks/TurretImage.qml">qml/units/tanks/TurretImage.qml</file>
         <file alias="maps/props/Prop.qml">qml/maps/props/Prop.qml</file>
+        <file alias="maps/props/PropCluster.qml">qml/maps/props/PropCluster.qml</file>
         <file alias="maps/props/PropRectangle.qml">qml/maps/props/PropRectangle.qml</file>
         <file alias="maps/Map.qml">qml/maps/Map.qml</file>
         <file alias="menus/ScenarioMenu.qml">qml/menus/ScenarioMenu.qml</file>
